--- a/.github/workflows/reusable-macos.yml
+++ b/.github/workflows/reusable-macos.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         os: [
           "macos-14",  # M1
+          "macos-13",  # Intel
         ]
     runs-on: ${{ matrix.os }}
     steps:
