--- a/.github/workflows/reusable-macos.yml
+++ b/.github/workflows/reusable-macos.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         os: [
           "macos-14",  # M1
-          "macos-13",  # Intel
+          "macos-15-intel",  # Intel
         ]
     runs-on: ${{ matrix.os }}
     steps:
