--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -202,23 +202,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Cirrus and macos-14 are M1, macos-15-intel is default GHA Intel.
-        # macOS 13 only runs tests against the GIL-enabled CPython.
-        # Cirrus used for upstream, macos-14 for forks.
+        # macos-14 is M1, macos-15-intel is default GHA Intel.
+        # macos-15-intel only runs tests against the GIL-enabled CPython.
+        # macos-14 is for forks.
         os:
-        - ghcr.io/cirruslabs/macos-runner:sonoma
         - macos-14
         - macos-15-intel
-        is-fork:  # only used for the exclusion trick
-        - ${{ github.repository_owner != 'python' }}
         free-threading:
         - false
         - true
         exclude:
-        - os: ghcr.io/cirruslabs/macos-runner:sonoma
-          is-fork: true
-        - os: macos-14
-          is-fork: false
         - os: macos-15-intel
           free-threading: true
     uses: ./.github/workflows/reusable-macos.yml
