gh-53509: Move _PyObject_ASSERT() to the internal C API
Add pycore_utils.h internal header file. Move the following APIs to
pycore_utils.h:

* _PyObject_ASSERT() macro
* _PyObject_ASSERT_FAILED_MSG() macro
* _PyObject_ASSERT_FROM() macro
* _PyObject_ASSERT_WITH_MSG() macro
* _PyObject_AssertFailed() function

--- a/PCbuild/pythoncore.vcxproj
+++ b/PCbuild/pythoncore.vcxproj
@@ -331,6 +331,7 @@
     <ClInclude Include="..\Include\internal\pycore_unicodeobject.h" />
     <ClInclude Include="..\Include\internal\pycore_unicodeobject_generated.h" />
     <ClInclude Include="..\Include\internal\pycore_uniqueid.h" />
+    <ClInclude Include="..\Include\internal\pycore_utils.h" />
     <ClInclude Include="..\Include\internal\pycore_warnings.h" />
     <ClInclude Include="..\Include\internal\pycore_weakref.h" />
     <ClInclude Include="..\Include\intrcheck.h" />
