--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -424,8 +424,7 @@ jobs:
       matrix:
         include:
           - arch: aarch64
-            runs-on: macos-15
-
+            runs-on: macos-14
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
@@ -439,10 +438,10 @@ jobs:
       # https://github.com/actions/runner-images/issues/12751.
       - name: Select Xcode version
         run: |
-          sudo xcode-select --switch /Applications/Xcode_16.4.app
+          sudo xcode-select --switch /Applications/Xcode_15.4.app
 
       - name: Build and test
-        run: python3 Apple ci iOS --simulator 'iPhone 16e,OS=18.5'
+        run: python3 Apple ci iOS --simulator 'iPhone SE 3rd generation,OS=17.5'
 
   build-wasi:
     name: 'WASI'
