Redupe LLVM version reference from jit.yml

--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -31,6 +31,7 @@ concurrency:
 
 env:
   FORCE_COLOR: 1
+  LLVM_VERSION: 20
 
 jobs:
   interpreter:
@@ -67,8 +68,6 @@ jobs:
         debug:
           - true
           - false
-        llvm:
-          - 20
         include:
           - target: i686-pc-windows-msvc/msvc
             architecture: Win32
@@ -110,7 +109,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install llvm@${{ matrix.llvm }}
+          brew install llvm@${{ env.LLVM_VERSION }}
           export SDKROOT="$(xcrun --show-sdk-path)"
           # Set MACOSX_DEPLOYMENT_TARGET and -Werror=unguarded-availability to
           # make sure we don't break downstream distributors (like uv):
@@ -123,8 +122,8 @@ jobs:
       - name: Linux
         if: runner.os == 'Linux'
         run: |
-          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ matrix.llvm }}
-          export PATH="$(llvm-config-${{ matrix.llvm }} --bindir):$PATH"
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ env.LLVM_VERSION }}
+          export PATH="$(llvm-config-${{ env.LLVM_VERSION }} --bindir):$PATH"
           ./configure --enable-experimental-jit ${{ matrix.debug && '--with-pydebug' || '' }}
           make all --jobs 4
           ./python -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
@@ -134,11 +133,6 @@ jobs:
     needs: interpreter
     runs-on: ubuntu-24.04
     timeout-minutes: 90
-    strategy:
-      fail-fast: false
-      matrix:
-        llvm:
-          - 20
     steps:
       - uses: actions/checkout@v4
         with:
@@ -148,8 +142,8 @@ jobs:
           python-version: '3.11'
       - name: Build with JIT enabled and GIL disabled
         run: |
-          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ matrix.llvm }}
-          export PATH="$(llvm-config-${{ matrix.llvm }} --bindir):$PATH"
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ env.LLVM_VERSION }}
+          export PATH="$(llvm-config-${{ env.LLVM_VERSION }} --bindir):$PATH"
           ./configure --enable-experimental-jit --with-pydebug --disable-gil
           make all --jobs 4
       - name: Run tests
@@ -176,8 +170,8 @@ jobs:
           python-version: '3.11'
       - name: Build with JIT
         run: |
-          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ matrix.llvm }}
-          export PATH="$(llvm-config-${{ matrix.llvm }} --bindir):$PATH"
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ env.LLVM_VERSION }}
+          export PATH="$(llvm-config-${{ env.LLVM_VERSION }} --bindir):$PATH"
           ./configure --enable-experimental-jit --with-pydebug
           make all --jobs 4
       - name: Run tests without optimizations
