--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -441,7 +441,7 @@ jobs:
           sudo xcode-select --switch /Applications/Xcode_16.4.app
 
       - name: Build and test
-        run: python3 Apple ci iOS --simulator 'iPhone 16e,OS=18.5'
+        run: python3 Apple ci iOS --fast-ci --simulator 'iPhone 16e,OS=18.5'
 
   build-wasi:
     name: 'WASI'
