gh-140421: Fix perf trampoline on older macOS
* Use mach_absolute_time() when clock_gettime() is not available.
* Define MAP_ANONYMOUS to MAP_ANON if the latter is defined and the
  former is not. This matches what is done elsewhere in the code base
  in this situation, e.g. mmapmodule.c.
* Don't build perf trampoline on ppc systems, where getting this to
  work would be a lot more effort.

--- a/configure.ac
+++ b/configure.ac
@@ -3704,7 +3704,10 @@ AC_MSG_CHECKING([perf trampoline])
 AS_CASE([$PLATFORM_TRIPLET],
   [x86_64-linux-gnu], [perf_trampoline=yes],
   [aarch64-linux-gnu], [perf_trampoline=yes],
-  [darwin], [perf_trampoline=yes],
+  [darwin], AS_CASE([$host_cpu],
+                [p*pc*], [perf_trampoline=no],
+                [*], [perf_trampoline=yes]
+                ),
   [perf_trampoline=no]
 )
 AC_MSG_RESULT([$perf_trampoline])
