--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3128,8 +3128,7 @@ Python/emscripten_trampoline_wasm.c: Python/emscripten_trampoline_inner.wasm
 JIT_DEPS = \
 		$(srcdir)/Tools/jit/*.c \
 		$(srcdir)/Tools/jit/*.py \
-		$(srcdir)/Python/executor_cases.c.h \
-		pyconfig.h
+		$(srcdir)/Python/executor_cases.c.h
 
 jit_stencils.h @JIT_STENCILS_H@: $(JIT_DEPS)
 	@REGEN_JIT_COMMAND@
