--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -57,7 +57,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
-# To re-enable later when we support thesee.
+# To re-enable later when we support these.
 #          - i686-pc-windows-msvc/msvc
 #          - x86_64-pc-windows-msvc/msvc
 #          - aarch64-pc-windows-msvc/msvc
@@ -71,7 +71,7 @@ jobs:
         llvm:
           - 19
         include:
-# To re-enable later when we support thesee.
+# To re-enable later when we support these.
 #          - target: i686-pc-windows-msvc/msvc
 #            architecture: Win32
 #            runner: windows-2022
